@@ -1,5 +1,10 @@
 2009-08-31  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/time/TimeSeries.java
+    (createCopy): Clear cached minY and maxY values.
+
+2009-08-31  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/plot/Plot.java
     (DEFAULT_OUTLINE_STROKE): Changed default cap and join.
 
